tests/build/cases/widget_new/unknown_property2.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `unknown`
 --> cases/widget_new/unknown_property2.rs:6:9
  |
6 |         unknown = {
  |         ^^^^^^^ use of undeclared crate or module `unknown`
